syntax = "proto3";

package transaction.v1;

import "astria/primitive/v1/types.proto";

message Action {
  oneof value {
    // Core protocol actions are defined on 1-10
    Transfer transfer = 1;
    SendText send_text = 2;
  }
}

// `TransferAction` represents a value transfer transaction.
//
// Note: all values must be set (ie. not `None`), otherwise it will
// be considered invalid by the sequencer.
message Transfer {
  astria.primitive.v1.Address to = 1;
  astria.primitive.v1.Uint128 amount = 2;
  // the asset to be transferred
  string asset = 3;
  // the asset used to pay the transaction fee
  string fee_asset = 4;
}

// `TextAction` represents a text message transaction.
//  Note: all values must be set (ie. not `None`), otherwise it will
// be considered invalid by the sequencer.
message SendText {
  string text = 1;
  string from = 2;
  string fee_asset = 3;
}
